--- a/conf/modules.config
+++ b/conf/modules.config
@@ -20,13 +20,67 @@
 ----------------------------------------------------------------------------------------
 */
 
-params {
-    modules {
-        'fastqc' {
-            args = "--quiet"
-        }
-        'multiqc' {
-            args = ""
-        }
+/*
+Replacements:
+args*            === ext.args* (would be more readable imo if we could do <tool>_args and make sure it's intialised in the module code like suffix)
+publish_dir      === override path: or saveAs: as necessary
+publish_by_meta  === just include into the path: or saveAs: as necessary. Need to ensure wrapped in a Closure
+publish_files    === Use pattern: and saveAs: to include/exclude files.
+suffix           === ext.suffix
+anything else    === ext.something
+*/
+
+/* Pros:
+ - Configuration is now in one place (instead of at least 3 - modules.config, addParams, subworkflow script)
+ - Standard NF syntax
+ - One functions.nf - Probably need to move this to package with modules
+ */
+
+process {
+
+    publishDir = [
+        [
+            path: { "${params.outdir}/${getSoftwareName(task.process)}" },
+            mode: params.publish_mode,
+            saveAs: { filename -> filename.endsWith('.version.txt') ? null : filename }
+        ],
+        [
+            path: { "${params.outdir}/${getSoftwareName(task.process)}" },
+            mode: params.publish_mode,
+            pattern: '*.version.txt',
+            enabled: false
+        ]
+    ]
+    withName: 'FASTQC' {
+        ext.args = '--quiet'
+        /*publishDir = [  // This is more verbose, but it's all in one place.
+            [
+                path: { "${params.outdir}/${getSoftwareName(task.process)}/${meta.id}" },
+                mode: params.publish_mode,
+                pattern: '*.html'
+            ],
+            [
+                path: { "${params.outdir}/${getSoftwareName(task.process)}/${meta.id}/zips" },
+                mode: params.publish_mode,
+                pattern: '*.zip'
+            ]
+        ]*/
     }
+    withName: 'MULTIQC' {
+        ext.args = params.multiqc_title? "--title \"$params.multiqc_title\"": ''
+    }
+    withName: 'SAMPLESHEET_CHECK' {
+        publishDir = [
+            path: { "${params.outdir}/pipeline_info" },
+            mode: params.publish_mode
+        ]
+    }
+    withName: 'GET_SOFTWARE_VERSIONS' {
+        publishDir = [
+            path: { "${params.outdir}/pipeline_info" },
+            mode: params.publish_mode,
+            pattern: '*.tsv'
+        ]
+    }
+
 }
